Another attempted light/dark mode fix

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -112,20 +112,13 @@ body {
 /* The remaining sections provide reasonable light/dark mode support */
 @media (prefers-color-scheme: dark) {
 
-}
-
-@media (prefers-color-scheme: light) {
-
+    
     :root {
         --background-primary: rgb(32, 31, 31);
         --background-secondary: rgb(57, 56, 56);
         --text-normal: #dcddde;
     }
     
-    html {
-        filter: invert(100%);
-    }
-
     html body img,
     html body iframe,
     html body video {
@@ -136,5 +129,9 @@ body {
     .callout {
         background-color: rgba(var(--callout-color), 0.4);
     }
+}
+
+@media (prefers-color-scheme: light) {
+
 
 }
